--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,5 +19,6 @@ subjects:
 - !lcsh 'Catholic Church -- Ireland -- Periodicals'
 - !lcsh 'Catholic Church -- Periodicals'
 - !lcc 'BX'
+- GITenberg
 title: The Irish Ecclesiastical Record, Volume 1, April 1865
 url: http://www.gutenberg.org/ebooks/36889
